2006-07-29  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added sctp_n2 test program
	* src/drivers/sctp2.c: corrections made to sctp before interop
	* src/drivers/sctp_adler32.c: compile non-optimized
	* src/drivers/sctp_crc32c.c: compile non-optimized
	* src/drivers/sctp_hmac_md5.c: compile non-optimized
	* src/drivers/sctp_hmac_sha1.c: compile non-optimized
	* src/drivers/sctp_md5.c: compile non-optimized
	* src/drivers/sctp_sha1.c: compile non-optimized
	* src/test/test-sctp_n.c: corrections to test programs
	* src/test/test-sctp_t.c: corrections to test programs
	* src/test/test-sctp_n2.c: additional test program
	* tests/Makefile.am: added sctp_n2 testsuite
	* tests/testsuite-sctp_n.at: completed sctp_n testsuite
	* tests/testsuite-sctp_t.at: completed sctp_t testsuite
	* tests/testsuite.at: added sctp_n2 testsuite
	* tests/testsuite-sctp_n2.at: added sctp_n2 testsuite

2006-07-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: expand majors, minors and module ids, rationalize to
	  strinet and strxns

2006-07-24  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: compile error

2006-07-16  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped release number for release candidate 3
	* debian/changelog: bumped release number for release candidate 3
	* NEWS: bumped release number for release candidate 3
	* acinclude.m4: handle skb_linearize with one arg on recent kernels
	* src/drivers/sctp2.c: handle skb_linearize with one arg on recent kernels
	* src/drivers/sctp_input.c: handle skb_linearize with one arg on recent kernels

2006-07-15  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: take care with free_func's
	* src/drivers/sctp_input.c: take care with free_func's
	* src/util/init/strsctp.sh: corrected debian device installation

2006-07-09  Brian Bidulock  <bidulock@openss7.org>

	* README: updated quick installation instructions

2006-07-08  Brian Bidulock  <bidulock@openss7.org>
