@@ -1,6 +1,6 @@
 # =============================================================================
 # 
-# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.47 $) $Date: 2006/07/29 07:44:03 $
+# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.48 $) $Date: 2006/08/07 22:17:00 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,11 +45,14 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/07/29 07:44:03 $ by $Author: brian $
+# Last Modified $Date: 2006/08/07 22:17:00 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: Makefile.am,v $
+# Revision 0.9.2.48  2006/08/07 22:17:00  brian
+# - changes from SCTP Interop
+#
 # Revision 0.9.2.47  2006/07/29 07:44:03  brian
 # - CVS checkin of changes before leaving for SCTP interop
 #
