@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# @(#) $RCSfile: strsctp,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2006/05/08 03:35:07 $
+# @(#) $RCSfile: strsctp,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2006/08/07 22:17:17 $
 # Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com>
 # Copyright (c) 1997-2000  Brian F. G. Bidulock <bidulock@openss7.org>
 # All Rights Reserved.
@@ -267,7 +267,7 @@ esac
 
 # =============================================================================
 # 
-# @(#) $RCSfile: strsctp,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2006/05/08 03:35:07 $
+# @(#) $RCSfile: strsctp,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2006/08/07 22:17:17 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -312,7 +312,7 @@ esac
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/05/08 03:35:07 $ by $Author: brian $
+# Last Modified $Date: 2006/08/07 22:17:17 $ by $Author: brian $
 #
 # =============================================================================
 
